--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=cleanwheel
+
+spring.datasource.url=jdbc:postgresql://localhost:5555/cleanwheel
+spring.datasource.username=postgres
+spring.datasource.password=2525
+
+spring.jpa.show-sql=true
