--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=2525
 
 spring.jpa.show-sql=true
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
